# plutus-plonky3-exploration

./: .gitignore  ARCHITECTURE.md  README.md  run_pipeline.sh  set_fri_params.sh
aiken/: aiken.toml  plutus.json
aiken/lib/: hash_test.ak
aiken/lib/babybear/: ext4.ak  field.ak
aiken/lib/goldilocks/: ext2.ak  field.ak
aiken/lib/koalabear/: ext4.ak  field.ak
aiken/lib/mersenne31/: ext3.ak  field.ak
aiken/lib/stark/: challenger.ak  fri.ak  logup.ak  mmcs.ak  params.ak  pcs_verify.ak  proof.ak  proof_test.ak  verifier.ak  verify_constraints.ak
aiken/validators/: fib_verifier.ak  poly_eval.ak
docs/: benchmark.md  memory-profiling.md  plonky3.md  proposal-plonky3-stark-verification-on-cardano.md
plonky3/: Cargo.toml  convert.py  security.py
plonky3/src/: export_batch_proof.rs  export_proof.rs  fib_air.rs  verify_proof.rs
