[package]
name = "plonky3-exploration"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fib"
path = "src/fib_air.rs"

[[bin]]
name = "export_proof"
path = "src/export_proof.rs"

[dependencies]
rand = "0.10.1"
postcard = { version = "1.1.3", features = ["alloc"] }
serde_json = "1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

p3-field = { git = "https://github.com/Plonky3/Plonky3.git", tag = "v0.5.1" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", tag = "v0.5.1" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git", tag = "v0.5.1" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", tag = "v0.5.1" }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3.git", tag = "v0.5.1" }
p3-air = { git = "https://github.com/Plonky3/Plonky3.git", tag = "v0.5.1" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git", tag = "v0.5.1" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git", tag = "v0.5.1" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git", tag = "v0.5.1" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git", tag = "v0.5.1" }
p3-sha256 = { git = "https://github.com/Plonky3/Plonky3.git", tag = "v0.5.1" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git", tag = "v0.5.1" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git", tag = "v0.5.1" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", tag = "v0.5.1" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git", tag = "v0.5.1" }
p3-circle = { git = "https://github.com/Plonky3/Plonky3.git", tag = "v0.5.1" }

#[patch."https://github.com/Plonky3/Plonky3.git"]
#p3-field = { path = "../../Plonky3/field" }
#p3-baby-bear = { path = "../../Plonky3/baby-bear" }
#p3-goldilocks = { path = "../../Plonky3/goldilocks" }
#p3-koala-bear = { path = "../../Plonky3/koala-bear" }
#p3-mersenne-31 = { path = "../../Plonky3/mersenne-31" }
#p3-air = { path = "../../Plonky3/air" }
#p3-challenger = { path = "../../Plonky3/challenger" }
#p3-commit = { path = "../../Plonky3/commit" }
#p3-dft = { path = "../../Plonky3/dft" }
#p3-fri = { path = "../../Plonky3/fri" }
#p3-sha256 = { path = "../../Plonky3/sha256" }
#p3-matrix ={ path = "../../Plonky3/matrix" }
#p3-merkle-tree = { path = "../../Plonky3/merkle-tree" }
#p3-symmetric = { path = "../../Plonky3/symmetric" }
#p3-uni-stark = { path = "../../Plonky3/uni-stark" }

